# Circle_Bundles

./: .gitignore  .readthedocs.yaml  .rtd_trigger  01_Quotient_Metrics.ipynb  02_Synthetic_Natural_Image_Patches.ipynb  04_Prism_Densities.ipynb  05_Star_Density_Lifting.ipynb  08_Real_Optical_Flow_Boundary_Torus.ipynb  CITATION.cff  Exploring The Sintel Dataset.ipynb  K(50,60) Boundary Torus.ipynb  LICENSE  Prism Density Demo-Copy1.ipynb  Prism Density Demo.ipynb  Prism Density Experiment.ipynb  Quotient Metric Demos.ipynb  README.md  Real Optical Flow Fiberwise Clustering K(50,60) -- Private.ipynb  Real Optical Flow Fiberwise Clustering K(50,60).ipynb  Real Optical Flow Torus Demo.ipynb  Real Optical Flow Torus Experiment -- Private.ipynb  Star Density Lifting Demo.ipynb  Star Density Lifting Experiment.ipynb  Synthetic Circle Bundle Demos.ipynb  Synthetic Circle Bundles Over S1.ipynb  Synthetic Natural Image Patch Demo.ipynb  Synthetic Optical Flow Patch Demo.ipynb  Untitled.ipynb  genindex.html  index.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  quickstart.html  readthedocs.yaml  search.html  searchindex.js
.github/workflows/: ci.yml
_modules/: index.html
_sources/: index.rst.txt  quickstart.rst.txt
_sources/api/: results.rst.txt  utilities_analysis.rst.txt
api/: core.html  index.html  metrics.html  results.html  utilities_synthetic.html
attic/circle_bundles/: t2_bundle_metrics.py
circle_bundles/: __init__.py  api.py  base_covers.py  bundle.py  bundle2.py  bundle_map.py  characteristic_class.py  class_persistence.py  coordinatization.py  covers.py  fiberwise_clustering.py  frame_reduction.py  gauge_canon.py  geometric_unwrapping.py  geometry.py  local_analysis.py  local_triv.py  metric_ball_cover_builders.py  metrics.py  nerve_utils.py  o2_cocycle.py  old_api.py  quality.py  status_utils.py  t2_bundle_metrics.py  triangle_cover_builders.py  triangle_cover_builders_fibonacci.py  triangle_covers.py  z2_linear.py
circle_bundles.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
circle_bundles/analysis/: class_persistence.py  fiberwise_clustering.py  local_analysis.py  quality.py
circle_bundles/covers/: covers.py  fibonacci_covers.py  metric_ball_cover_builders.py  triangle_cover_builders.py  triangle_cover_builders_fibonacci.py
circle_bundles/geometry/: geometric_unwrapping.py
circle_bundles/nerve/: combinatorics.py
circle_bundles/optical_flow/: __init__.py  contrast.py
circle_bundles/reduction/: frame_reduction.py
circle_bundles/summaries/: bundle_map_summary.py  class_summary.py  local_triv_summary.py  nerve_summary.py  transition_summary.py
circle_bundles/synthetic/: __init__.py  api.py  character_dataset.py  densities.py  mesh_vis.py  meshes.py  nat_img_patches.py  opt_flow_patches.py  s2_bundles.py  so3_sampling.py  step_edges.py  tori_and_kb.py
circle_bundles/trivializations/: bundle_map.py  coordinatization.py  global_trivialization.py  (+1 more)
docs/: citing.rst  conf.py  index.rst  installation.rst  quickstart.rst  references.bib  requirements.txt
optical_flow/: __init__.py  api.py  contrast.py  flow_frames.py  flow_processing.py  patch_viz.py
private_notebooks/: Exploring The Sintel Dataset -- Private.ipynb  Prism Density Experiment -- Private.ipynb  Real Optical Flow Torus Experiment -- Private.ipynb  Star Density Lifting Experiment -- Private.ipynb  Synthetic Natural Image Patch Experiment -- Private.ipynb
synthetic/: api.py  densities.py  lens_polys.py  mesh_vis.py  meshes.py  nat_img_patches.py  opt_flow_patches.py  s2_bundles.py  so3_sampling.py  step_edges.py  tori_and_kb.py
tests/: conftest.py  test_bundle_pipeline.py  test_combinatorics.py  test_covers.py  test_metrics.py  test_o2_cocycle.py  test_synthetic.py
tutorials/: index.html
(+459 files in other folders)
