[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circle-bundles"
version = "0.1.0"
description = "Discrete approximate circle bundles and characteristic classes for data analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Brad Turow" },
  { name = "José A. Perea" }
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "networkx",
  "scikit-learn",
  "sympy",
]

[project.optional-dependencies]
viz = ["plotly"]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/bradturow/Circle_Bundles"
Repository = "https://github.com/bradturow/Circle_Bundles"
Documentation = "https://circle-bundles.readthedocs.io"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["circle_bundles*"]
